# jcal

./: .gitignore  Cargo.toml  README.md
cal/: Cargo.toml  README.md
cal/src/: arg_parser.rs  layout.rs  main.rs  string.rs
date/: Cargo.toml  README.md
date/src/: arg_parser.rs  main.rs
sources/: configure.ac
sources/libjalali/: Makefile.am
sources/src/: Makefile.am
sources/test_kit/jalali/: Makefile.am
sources/test_kit/jtime/: Makefile.am
src/: clap_helper.rs  date.rs  lib.rs  parser.rs  posix.rs  strftime.rs
