[workspace]
members = ["cal", "date"]

[workspace.package]
edition = "2024"
rust-version = "1.85" # technically much lower, but aim is for 2024
authors = ["M. Yas. Davoodeh <MYDavoodeh@gmail.com>"]
repository = "https://github.com/Davoodeh/jcal"
license = "Apache-2.0 OR MIT"
keywords = ["cal", "date", "util", "Jalali", "Jelal"]
categories = ["date-and-time", "command-line-utilities"]

[workspace.dependencies]
jelal = { version = "0.5.0", features = ["std", "jiff"] }
jiff = "0.2.15" # the best timezone parser with POSIX support

clap = { version = "4.5.46", features = ["cargo"] } # TODO limit to bins only

[package]
name = "jcal"
version = "0.1.1"
description = "Calendar common utilities for `jcal-cal` and `jcal-date`"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jelal.workspace = true
jiff.workspace = true
clap.workspace = true

parse_datetime = "0.13.1"

[patch.crates-io]
# This version of jiff is the first version that has a reworked BrokenDownTime
# See #428 and #432
jiff = { git = "https://github.com/BurntSushi/jiff/", rev = "fdf6ab2978f49e0ac1154d78dd1c440965020506" }
