[package]
name = "jcal-date"
version = "0.1.0"
description = "`date` crate of `jcal` package (calendar with Jalali/Persian/Iranian support)"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jcal = { path = "../", version = "0.1.1" }

jelal.workspace = true
jiff.workspace = true
clap.workspace = true
